--- a/matRiks-paper.tex
+++ b/matRiks-paper.tex
@@ -210,6 +210,19 @@ The figures can be summarized in different categories, and for each of these cat
 
 The following types of figure are available in the matRiks package. For each type of figures, there is a vignette availbale that lists the entire figures for each type:
 
+\begin{table}
+\centering
+\begin{tabular}[t]{l>{}ll>{}ll>{}l}
+\toprule
+Figure Category & Example & Figure Category & Example & Figure Category & Example\\
+\midrule
+Black figures & \includegraphics[width=1in, height=1in]{black-figures.png} & Flower figures & \includegraphics[width=1in, height=1in]{flowers.png} & Other figures & \includegraphics[width=1in, height=1in]{other-figures.png}\\
+Circle sections & \includegraphics[width=1in, height=1in]{circle-sections.png} & Eight-shaped figures & \includegraphics[width=1in, height=1in]{eight-shapes-figures.png} &  & \includegraphics[width=1in, height=1in]{other-figures.png}\\
+Closed figures & \includegraphics[width=1in, height=1in]{closed-figures.png} & Lines & \includegraphics[width=1in, height=1in]{lines.png} &  & \includegraphics[width=1in, height=1in]{other-figures.png}\\
+\bottomrule
+\end{tabular}
+\end{table}
+
 \begin{figure}
 \includegraphics[width=0.5\linewidth]{matRiks-paper_files/figure-latex/unnamed-chunk-2-1} \caption{[Black figures](https://cran.r-project.org/web/packages/matRiks/vignettes/black-figures.html)}\label{fig:unnamed-chunk-2}
 \end{figure}
